--- a/html_ts_boilerplate/src/index.html
+++ b/html_ts_boilerplate/src/index.html
@@ -1,21 +1,108 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" href="/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="/styles.css">
-    <title>Document</title>
-</head>
-<body>
-    <h1>
-        Hello World
-    </h1>
-    <img src="/assets/images/cat.jpeg" alt="" width="300">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="icon" href="/favicon.png" type="image/x-icon" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="/styles.css" />
+    <title>cleaning landing page</title>
+  </head>
+  <body>
+    <header>
+      <div class="container header-container">
+        <div class="logo-container">
+          <img
+            src="assets/images/Round Rock Cleaning Services.png"
+            alt="Round Rock Cleaning Services Logo"
+            class="r-r-c-logo"
+          />
+        </div>
 
+        <div class="container px-4">
+          <div class="row gx-5">
+            <div class="col col-6">
+              <div class="p-3 border-none bg-none">
+                <h1>Lorem ipsum Lorem</h1>
+                <p>
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry. Lorem Ipsum has been the industry's
+                  standard dummy text ever since the 1500s, when an unknown
+                  printer took a galley of type and scrambled
+                </p>
+                <ul>
+                  <li>
+                    <div class="services-option">
+                      <img
+                        src="assets/images/carbon_rain-drop.png"
+                        alt=""
+                      />Services 1
+                    </div>
+                  </li>
+                  <li>
+                    <div class="services-option">
+                      <img
+                        src="assets/images/carbon_rain-drop.png"
+                        alt=""
+                      />Services 2
+                    </div>
+                  </li>
+                  <li>
+                    <div class="services-option">
+                      <img
+                        src="assets/images/carbon_rain-drop.png"
+                        alt=""
+                      />Services 3
+                    </div>
+                  </li>
+                </ul>
+                <div class="button-services">
+                  <button type="button" class="btn btn-primary" id="i-need-help">
+                    I need help
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="col col-6">
+              <div class="p-3 border bg-light">
+                <h3 class="contact-us">
+Contact us
+</h3>
+<p></p>
+<p></p>
+<p></p>
+<div class="button-services">
+    <button type="button" class="btn btn-primary" id="contact-us">
+      I need help
+    </button>
+  </div>
+</div>
+<h3 class="contact-us-container">
+
+              </div>
+            </div>
+          </div>
+        </div>
+
+       
+        </div>
+      </div>
+    </header>
 
     <script src="/scripts.js"></script>
-</body>
+  </body>
 </html>
