htnm and css for testymonials and services

--- a/html_ts_boilerplate/src/index.html
+++ b/html_ts_boilerplate/src/index.html
@@ -76,13 +76,7 @@
                   </li>
                 </ul>
                 <div class="button-services">
-                  <button
-                    type="button"
-                    class="btn btn-primary"
-                    id="i-need-help"
-                  >
-                    I need help
-                  </button>
+                  <button type="button" id="i-need-help-1">I need help</button>
                 </div>
               </div>
             </div>
@@ -100,37 +94,255 @@
         </div>
       </div>
     </header>
-    <div class="container about-us-container">
-      <div class="about-us-content">
-        <div class="about-us-header">
-          <h3 class="about-us-header">About Us</h3>
+    <div class="about-us-container">
+      <div class="about-us-container-content">
+        <div class="header-container-about-us">
+          <h2 class="about-us">About Us</h2>
         </div>
-        <div class="container px-4 about-us-numbered-info mt-5">
-          <div class="row">
-            <div class="col">
-              <div class="p-3 border bg-light">Custom column padding</div>
+        <div class="container-with-facts">
+          <div class="first-fact-row">
+            <div class="about-us-fact">
+              <img src="assets/images/n1.png" alt="nr1" />
+              <p class="about-us-text">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley
+              </p>
             </div>
-            <div class="col">
-              <div class="p-3 border bg-light">Custom column padding</div>
+            <div class="about-us-fact">
+              <img src="assets/images/n2.png" alt="nr2" />
+              <p class="about-us-text">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley
+              </p>
             </div>
-            <div class="col">
-              <div class="p-3 border bg-light">Custom column padding</div>
+            <div class="about-us-fact">
+              <img src="assets/images/n3.png" alt="nr3" />
+              <p class="about-us-text">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley
+              </p>
             </div>
           </div>
-          <div class="row">
-            <div class="col">
-              <div class="p-3 border bg-light">Custom column padding</div>
+          <div class="second-fact-row">
+            <div class="about-us-fact">
+              <img src="assets/images/n4.png" alt="nr4" />
+              <p class="about-us-text">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley
+              </p>
             </div>
-            <div class="col">
-              <div class="p-3 border bg-light">Custom column padding</div>
+            <div class="about-us-fact">
+              <img src="assets/images/n5.png" alt="nr5" />
+              <p class="about-us-text">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley
+              </p>
             </div>
-            <div class="col">
-              <div class="p-3 border bg-light">Custom column padding</div>
+            <div class="about-us-fact">
+              <img src="assets/images/n6.png" alt="nr6" />
+              <p class="about-us-text">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley
+              </p>
             </div>
           </div>
+        </div>
+        <div class="button-services">
+          <button type="button" id="i-need-help-2">I need help</button>
         </div>
       </div>
     </div>
+    <div class="services-container">
+      <div class="services-container-content">
+        <div class="header-container-services">
+          <h2 class="services">Services</h2>
+        </div>
+        <div class="all-services">
+          <div class="container-with-services">
+            <div class="services-img">
+              <img
+                src="assets/images/clean-small-img.png"
+                alt="cleaning-supplies"
+              />
+            </div>
+            <div class="services-header-small">
+              <p>Lorem Ipsum</p>
+            </div>
+            <div class="services-description">
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley
+                of type and scrambled
+              </p>
+            </div>
+          </div>
+
+          <div class="container-with-services">
+            <div class="services-img">
+              <img
+                src="assets/images/clean-small-img.png"
+                alt="cleaning-supplies"
+              />
+            </div>
+            <div class="services-header-small"><p>Lorem Ipsum</p></div>
+            <div class="services-description">
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley
+                of type and scrambled
+              </p>
+            </div>
+          </div>
+
+          <div class="container-with-services">
+            <div class="services-img">
+              <img
+                src="assets/images/clean-small-img.png"
+                alt="cleaning-supplies"
+              />
+            </div>
+            <div class="services-header-small"><p>Lorem Ipsum</p></div>
+            <div class="services-description">
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley
+                of type and scrambled
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="button-services">
+          <button type="button" id="i-need-help-3">I need help</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="testymonials-container">
+      <div class="testymonials-container-content">
+        <div class="header-container-testymonials">
+          <h2 class="testymonials">Testymonials</h2>
+        </div>
+        <div class="all-testymonials">
+          <div class="testimonial-first-row">
+            <div class="container-with-testymonial">
+              <div class="testimonial-img">
+                <img
+                  src="assets/images/wom.png"
+                  class="testimonial-img"
+                  alt="women-photo"
+                />
+              </div>
+              <div class="testimonial-text">
+                <div class="testimonial-name">Courtney Henry</div>
+                <div class="testimonial-review">
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry. Lorem Ipsum has been the industry's
+                  standard dummy text ever since the 1500s, when an unknown
+                  printer took a galley of type and scrambled it to make a type
+                  specimen book
+                </div>
+                <div class="testimonial-stars">
+                  <img src="assets/images/Vector.png" alt="star" /><img
+                    src="assets/images/Vector.png"
+                    alt="star"
+                  /><img src="assets/images/Vector.png" alt="star" /><img
+                    src="assets/images/Vector.png"
+                    alt="star"
+                  /><img src="assets/images/Vector.png" alt="star" />
+                </div>
+              </div>
+            </div>
+            <div class="container-with-testymonial">
+              <div class="testimonial-img">
+                <img src="assets/images/Ellipse 1.png" alt="women-photo" />
+              </div>
+              <div class="testimonial-text">
+                <div class="testimonial-name">Courtney Henry</div>
+                <div class="testimonial-review">
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry. Lorem Ipsum has been the industry's
+                  standard dummy text ever since the 1500s, when an unknown
+                  printer took a galley of type and scrambled it to make a type
+                  specimen book
+                </div>
+                <div class="testimonial-stars">
+                  <img src="assets/images/Vector.png" alt="star" /><img
+                    src="assets/images/Vector.png"
+                    alt="star"
+                  /><img src="assets/images/Vector.png" alt="star" /><img
+                    src="assets/images/Vector.png"
+                    alt="star"
+                  /><img src="assets/images/Vector.png" alt="star" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="testimonial-second-row">
+            <div class="container-with-testymonial">
+              <div class="testimonial-img">
+                <img src="assets/images/Ellipse 1.png" alt="women-photo" />
+              </div>
+              <div class="testimonial-text">
+                <div class="testimonial-name">Courtney Henry</div>
+                <div class="testimonial-review">
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry. Lorem Ipsum has been the industry's
+                  standard dummy text ever since the 1500s, when an unknown
+                  printer took a galley of type and scrambled it to make a type
+                  specimen book
+                </div>
+                <div class="testimonial-stars">
+                  <img src="assets/images/Vector.png" alt="star" /><img
+                    src="assets/images/Vector.png"
+                    alt="star"
+                  /><img src="assets/images/Vector.png" alt="star" /><img
+                    src="assets/images/Vector.png"
+                    alt="star"
+                  /><img src="assets/images/Vector.png" alt="star" />
+                </div>
+              </div>
+            </div>
+            <div class="container-with-testymonial">
+              <div class="testimonial-img">
+                <img src="assets/images/Ellipse 1.png" alt="women-photo" />
+              </div>
+              <div class="testimonial-text">
+                <div class="testimonial-name">Courtney Henry</div>
+                <div class="testimonial-review">
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry. Lorem Ipsum has been the industry's
+                  standard dummy text ever since the 1500s, when an unknown
+                  printer took a galley of type and scrambled it to make a type
+                  specimen book
+                </div>
+                <div class="testimonial-stars">
+                  <img src="assets/images/Vector.png" alt="star" /><img
+                    src="assets/images/Vector.png"
+                    alt="star"
+                  /><img src="assets/images/Vector.png" alt="star" /><img
+                    src="assets/images/Vector.png"
+                    alt="star"
+                  /><img src="assets/images/Vector.png" alt="star" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="button-testymonials">
+          <button type="button" id="i-need-help-4">I need help</button>
+        </div>
+      </div>
+    </div>
+    <footer></footer>
     <script src="/scripts.js"></script>
   </body>
 </html>
